--- a/index.html
+++ b/index.html
@@ -12,7 +12,31 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                viewture
+            </a>
+            <ul class="navbar-nav">
+                <li class="nav-item px-5">
+                    <a class="nav-link" href="#">What we do</a>
+                </li>
+                <li class="nav-item px-5">
+                    <a class="nav-link" href="#">How it works</a>
+                </li>
+                <li class="nav-item px-5">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
+    <div class="row d-flex text-center">
+        <div class="col-12">
+            <p>Please complete & submit the short application form below and login via your YouTube account!</p>
+        </div>
+    </div>
 </body>
 
 </html>
