--- a/index.html
+++ b/index.html
@@ -19,23 +19,59 @@
                 viewture
             </a>
             <ul class="navbar-nav">
-                <li class="nav-item px-5">
+                <li class="nav-item px-3">
                     <a class="nav-link" href="#">What we do</a>
                 </li>
-                <li class="nav-item px-5">
+                <li class="nav-item px-3">
                     <a class="nav-link" href="#">How it works</a>
                 </li>
-                <li class="nav-item px-5">
+                <li class="nav-item px-3">
                     <a class="nav-link" href="#">About us</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <div class="row d-flex text-center">
+    <div class="row d-flex text-center hero-bar pt-3">
         <div class="col-12">
             <p>Please complete & submit the short application form below and login via your YouTube account!</p>
         </div>
+    </div>
+
+    <form>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">First Name</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Surname</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Communication Email</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Telephone</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Zip/Postal Code</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
+
+    <div class="row text-center pt-2">
+        <div class="col-12">
+            <h1 class="text-uppercase">how to connect<span id="with-us-text">with us</span></h1>
+        </div>
+    </div>
+
+    <div class="row empty-row py-4">
+        <div class="col-12"></div>
     </div>
 </body>
 
