--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="assets/media/logo-viewture.PNG" alt="logo" width="30" height="34" class="d-inline-block align-text-center">
                 viewture
             </a>
             <ul class="navbar-nav">
